--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
   
 	
 	 -->
-  <link rel="stylesheet" href="{{page.rot}}/less/style.css">
+  <link rel="stylesheet" href="{{page.rot}}/style/style.css">
 
 	<script src="{{page.rot}}/js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
 </head>
@@ -58,12 +58,9 @@
       </footer>
 
     </div> <!-- /container -->
-<!--script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script-->
-<script>window.jQuery || document.write('<script src="{{page.rot}}/js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-<script src="{{page.rot}}/js/libs/bootstrap/transition.js"></script>
-<script src="{{page.rot}}/js/libs/bootstrap/collapse.js"></script>
-
+<script src="{{page.rot}}/js/libs/jquery-1.7.1.min.js"></script>
+<script src="{{page.rot}}/js/libs/bootstrap/bootstrap.min.js"></script>
 <script src="{{page.rot}}/js/script.js"></script>
 <!--script>
 	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
