Added: change active link in navbar

--- a/templates/main.html
+++ b/templates/main.html
@@ -36,11 +36,11 @@
             <span class="i-bar"></span>
           </a>
           <a class="brand" href="{{page.rot}}/">BicBucStriim</a>
-          <div class="nav-collapse">
+          <div class="nav-collapse ">
             <ul class="nav">
-              <li class="active"><a href="{{page.rot}}/">Start</a></li>
-              <li><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
-              <li><a href="{{page.rot}}/authors">{{page.glob.langa.authors}}</a></li>
+              <li id="nav_start" class="active"><a href="{{page.rot}}/">Start</a></li>
+              <li id="nav_titles" ><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
+              <li id="nav_authors" ><a href="{{page.rot}}/authors">{{page.glob.langa.authors}}</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
