Made home link dynamic

--- a/templates/main.html
+++ b/templates/main.html
@@ -38,7 +38,7 @@
           <a class="brand" href="{{page.rot}}/">BicBucStriim</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li id="nav_start" class="active"><a href="{{page.rot}}/">Start</a></li>
+              <li id="nav_start" class="active"><a href="{{page.rot}}/">{{page.glob.langa.home}}</a></li>
               <li id="nav_titles" ><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
               <li id="nav_authors" ><a href="{{page.rot}}/authors">{{page.glob.langa.authors}}</a></li>
             </ul>
