Page headers changed to centered H1 elements

--- a/style/style.less
+++ b/style/style.less
@@ -15,10 +15,8 @@ body {
 footer a {color: @black;}
 .container a {color: @black;}
 
-.title_detail {
-  header h2 {
-    text-align: center;
-  }
+h1 {
+  text-align: center;
 }
 
 .multicol (@cc: 1, @cgap: 20px) {
