--- a/templates/author_detail.html
+++ b/templates/author_detail.html
@@ -1,12 +1,23 @@
 {% extends 'main.html' %}
 
-{% block content %}
+{% block nav %}
+<h1>BicBucStriim :: {{ page.glob.langa.authors }}</h1>
+<a href="{{page.rot}}/authors/" data-rel="back" data-icon="back" class="ui-btn-right">{{ page.glob.langa.back }}</a>
+<div data-role="navbar">
+	<ul>
+	  <li><a href="{{page.rot}}/">{{page.glob.langa.home}}</a></li>
+	  <li><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
+	  <li><a href="{{page.rot}}/authors" class="ui-btn-active">{{page.glob.langa.authors}}</a></li>       
+	</ul>
+</div>
+{% endblock %}
 
+{% block content %}
 <section class="author_detail row">
 	<header>
 		<h1>{{ author.name }}</h1>
 	</header>
-	<ul class="unstyled ">
+	<ul data-role="listview">
 		{% for book in books %}
 		<li><a href="{{page.rot}}/titles/{{book.id}}"><i class="icon-book"></i> {{ book.title }}</a></li>
 		{% endfor %}	
