--- a/templates/index_last30.html
+++ b/templates/index_last30.html
@@ -1,12 +1,22 @@
 {% extends 'main.html' %}
 
-{% block content %}
 
-<h1>{{ page.glob.langa.dl30 }}</h1>
-<ul class="ct unstyled">
+{% block nav %}
+<h1>BicBucStriim :: {{ page.glob.langa.dl30 }}</h1>
+<div data-role="navbar">
+	<ul>
+	  <li><a href="{{page.rot}}/" class="ui-btn-active">{{page.glob.langa.home}}</a></li>
+	  <li><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
+	  <li><a href="{{page.rot}}/authors">{{page.glob.langa.authors}}</a></li>       
+	</ul>
+</div>
+{% endblock %}
+
+{% block content %}
+<ul data-role="listview">
 	{% for book in books %}
   	<li>
-  		<a href="{{ page.rot }}/titles/{{ book.id }}"><i class="icon-book"></i>{{ book.title }}</a> ({{ book.pubdate|date("Y") }})
+  		<a href="{{ page.rot }}/titles/{{ book.id }}">{{ book.title }} ({{ book.pubdate|date("Y") }})</a> 
   	</li>
   {% endfor %}
 </ul>
