--- a/style/style.css
+++ b/style/style.css
@@ -3,23 +3,28 @@ body {
   padding-top: 60px;
   padding-bottom: 40px;
 }
-/* ===== Primary Styles ========================================================
-   Author:
-   ========================================================================== */
-h1 {
-  text-align: left;
+.title_detail header h1 {
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
-.title_detail_image {
+.title_detail header p {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+.title_detail .title_detail_image {
   width: 40%;
   float: left;
 }
-.title_detail_image img {
+.title_detail .title_detail_image img {
   max-width: 100%;
 }
-.title_details {
+.title_detail .title_details {
   width: 59%;
   float: right;
   padding-left: 1%;
+}
+div.footer p {
+  text-align: center;
 }
 @media (max-width: 480px) {
   .title_detail_image {
