--- a/style/style.less
+++ b/style/style.less
@@ -6,28 +6,21 @@ body {
 }
 
 
-
-/* ===== Primary Styles ========================================================
-   Author:
-   ========================================================================== */
-
-
-h1 {
-  text-align: left;
-}
-
-.title_detail_image {
-  width: 40%;
-  float: left;
-  img {
-    max-width: 100%;  
+.title_detail {
+  header h1 { margin-top : 2px; margin-bottom: 2px;}
+  header p { margin-top : 2px; margin-bottom: 2px;}
+  .title_detail_image {
+    width: 40%;
+    float: left;
+    img {
+      max-width: 100%;  
+    }  
+  }
+  .title_details {  
+    width: 59%;
+    float: right;
+    padding-left: 1%;
   }  
-}
-
-.title_details {  
-  width: 59%;
-  float: right;
-  padding-left: 1%;
 }
 
 .multicol (@cc: 1, @cgap: 20px) {
@@ -39,10 +32,12 @@ h1 {
 	column-gap: @cgap;
 }
 
-// body {font-size: 1.2em; line-height: 1.4em;}
+
+div.footer {
+  p { text-align: center; }
+}
+
 @media (max-width: 480px) {
-  //.ct {.multicol;}
-  //.ca {.multicol;}
   .title_detail_image {
     float: none;
     width: 100%;
@@ -53,18 +48,9 @@ h1 {
     padding-left: 1%;
   }
 }
-@media (max-width: 768px) {
-  //.ct {.multicol;}
-  //.ca {.multicol(2);} 
-}
-@media (min-width: 768px) and (max-width: 980px) {
-  //.ct {.multicol;}
-  //.ca {.multicol(3);}   
-}
-@media (min-width: 1200px) {
-  // .ct {.multicol(2);}
-  // .ca {.multicol(4);}
-}
+@media (max-width: 768px) {}
+@media (min-width: 768px) and (max-width: 980px) {}
+@media (min-width: 1200px) {}
 
 
 
