--- a/templates/main.html
+++ b/templates/main.html
@@ -6,15 +6,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 	<title>{{ page.title }}</title>
-
 	<meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="{{page.rot}}/style/style.css">
 	<script src="{{page.rot}}/js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
 </head>
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+
   <div data-role="page" data-title="{{ page.title }}">
     <div data-role="header" data-position="inline">            
       {% block nav %}{% endblock %}
@@ -22,23 +21,13 @@
     <div data-role="content">      
       {% block content %}{% endblock %}
     </div>
-    <div data-role="footer">
-      <footer>
-        <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012 Rainer Volz</p>
-      </footer>      
-    </div>
+    <div data-role="footer" class="footer">
+      <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012 Rainer Volz</p>
+    </div>      
   </div> <!-- page -->
 
   <script src="{{page.rot}}/js/libs/jquery-1.7.1.min.js"></script>
   <script src="{{page.rot}}/js/libs/jquery.mobile-1.1.0.min.js"></script>
-  <!--script src="{{page.rot}}/js/libs/bootstrap/bootstrap.min.js"></script-->
   <script src="{{page.rot}}/js/script.js"></script>
-  <!--script>
-  	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-  	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-  	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-  	s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script-->
-
 </body>
 </html>
