Configurable Username; Prepared for Tag support

--- a/templates/author_detail.html
+++ b/templates/author_detail.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block nav %}
-<h1>BicBucStriim :: {{ author.name }}</h1>
+<h1>{{ page.glob.appname }} :: {{ author.name }}</h1>
 <a href="{{page.rot}}/authors/" data-rel="back" data-icon="back" class="ui-btn-right">{{ page.glob.langa.back }}</a>
 <div data-role="navbar">
 	<ul>
