--- a/templates/authors.html
+++ b/templates/authors.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block nav %}
-<h1>BicBucStriim :: {{ page.glob.langa.authors }}</h1>
+<h1>{{ page.glob.appname }} :: {{ page.glob.langa.authors }}</h1>
 <div data-role="navbar">
 	<ul>
 	  <li><a href="{{page.rot}}/">{{page.glob.langa.home}}</a></li>
