--- a/templates/index_last30.html
+++ b/templates/index_last30.html
@@ -2,7 +2,7 @@
 
 
 {% block nav %}
-<h1>BicBucStriim :: {{ page.glob.langa.dl30 }}</h1>
+<h1>{{ page.glob.appname }} :: {{ page.glob.langa.dl30 }}</h1>
 <div data-role="navbar">
 	<ul>
 	  <li><a href="{{page.rot}}/" class="ui-btn-active">{{page.glob.langa.home}}</a></li>
