--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block nav %}
-<h1>BicBucStriim :: {{ book.title }}</h1>
+<h1>{{ page.glob.appname }} :: {{ book.title }}</h1>
 <a href="{{page.rot}}/titles/" data-rel="back" data-icon="back" class="ui-btn-right">{{ page.glob.langa.back }}</a>
 <div data-role="navbar">
 	<ul>
@@ -52,6 +52,14 @@
 					{% autoescape false %}
 					{{ comment }}
 					{% endautoescape %}
+				</div>
+				<div data-role="collapsible">
+					<h2>{{page.glob.langa.tags}}</h2>
+					<p>
+						{% for tag in tags %}
+						{{ tag.name }};
+						{% endfor %}
+					</p>
 				</div>
 	</section>	
 </section>
