More preparation for tag support

--- a/templates/author_detail.html
+++ b/templates/author_detail.html
@@ -7,7 +7,8 @@
 	<ul>
 	  <li><a href="{{page.rot}}/">{{page.glob.langa.home}}</a></li>
 	  <li><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
-	  <li><a href="{{page.rot}}/authors">{{page.glob.langa.authors}}</a></li>       
+	  <li><a href="{{page.rot}}/authors">{{page.glob.langa.authors}}</a></li>
+	  <li><a href="{{page.rot}}/tags">{{page.glob.langa.tags}}</a></li>       
 	</ul>
 </div>
 {% endblock %}
