--- a/templates/authors.html
+++ b/templates/authors.html
@@ -6,7 +6,8 @@
 	<ul>
 	  <li><a href="{{page.rot}}/">{{page.glob.langa.home}}</a></li>
 	  <li><a href="{{page.rot}}/titles">{{page.glob.langa.titles}}</a></li>
-	  <li><a href="{{page.rot}}/authors" class="ui-btn-active">{{page.glob.langa.authors}}</a></li>       
+	  <li><a href="{{page.rot}}/authors" class="ui-btn-active">{{page.glob.langa.authors}}</a></li>
+	  <li><a href="{{page.rot}}/tags">{{page.glob.langa.tags}}</a></li>       
 	</ul>
 </div>
 {% endblock %}
