--- a/templates/tag_detail.html
+++ b/templates/tag_detail.html
@@ -16,7 +16,7 @@
 {% block content %}
 <section class="author_detail row">
 	<header>
-		<h1>{{page.glob.langa.booksby}} {{ tag.name }}:</h1>
+		<h1>{{page.glob.langa.booksbytag}} "{{ tag.name }}":</h1>
 	</header>
 	<ul data-role="listview">
 		{% for book in books %}
