--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -43,25 +43,28 @@
 			{% endif %}		
 	</aside>
 	<section class="title_details">
+		<div id="authors">
 				<h2>{{page.glob.langa.authors}}</h2>
 				{% for author in authors %}
 				<a data-role="button" data-icon="info" href="{{page.rot}}/authors/{{author.id}}">{{ author.name }}</a>
 				{% endfor %} 
-
+		</div>
+		<div id="tags" data-role="collapsible">
+			<h2>{{page.glob.langa.tags}}</h2>
+			<p>
+				{% for tag in tags %}
+				<a data-role="button" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}">{{ tag.name }}</a>
+				{% endfor %}
+			</p>
+		</div>
+		<div id="comment">
 				<h2>{{page.glob.langa.comment}}</h2>			
 				<div>
 					{% autoescape false %}
 					{{ comment }}
 					{% endautoescape %}
 				</div>
-				<div data-role="collapsible">
-					<h2>{{page.glob.langa.tags}}</h2>
-					<p>
-						{% for tag in tags %}
-						<a data-role="button" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}">{{ tag.name }}</a>
-						{% endfor %}
-					</p>
-				</div>
+		</div>
 	</section>	
 </section>
 
