Password validation is now a synchronous Ajax call.

--- a/templates/password_dialog.html
+++ b/templates/password_dialog.html
@@ -1,14 +1,13 @@
 {% extends 'main.html' %}
 
 {% block content %}
-	<div>
-		<form action="/bbs/titles/{{bookid}}/checkaccess/" method="post" id="passwordform">
-			<fieldset>
-				<label for="password">Passwort</label>
-				<input type="password" id="password" name="password" value="" />				
-				<a data-role="button" data-rel="back" data-icon="delete" data-inline="true">Abbruch</a>
-				<button type="submit"  data-ajax="false" data-role="button"  data-icon="check" data-inline="true">OK</a>
-			</fieldset>
-		</form>
+	<div id="passwordform">
+		<fieldset>
+			<label for="password">Passwort</label>
+			<input type="password" id="password" name="password" value="" autofocus />		
+			<p id="pw_dlg_status">{{page.glob.langa.invalid_password}}</p>
+			<a data-role="button" data-rel="back" data-icon="delete" data-inline="true">{{page.glob.langa.back}}</</a>
+			<button class="checkdl" data-ajax="true" data-role="button"  data-icon="check" data-inline="true">{{page.glob.langa.check_access}}</a>
+		</fieldset>
 	</div>
 {% endblock %}
