--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,12 @@ body {
   padding-top: 60px;
   padding-bottom: 40px;
 }
+#passwordform #pw_dlg_status {
+  text-align: center;
+  background-color: orange;
+  font-size: large;
+  display: none;
+}
 .title_detail header h1 {
   margin-top: 2px;
   margin-bottom: 2px;
