--- a/style/style.less
+++ b/style/style.less
@@ -4,6 +4,14 @@ body {
   padding-bottom: 40px;
 }
 
+#passwordform {
+  #pw_dlg_status {
+    text-align: center;
+    background-color:orange;
+    font-size: large;
+    display: none;
+  }
+}
 
 .title_detail {
   header h1 { margin-top : 2px; margin-bottom: 2px;}
