--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -46,7 +46,7 @@
 						<a data-role="button" 
 							{% if page.glob.glob_dl_toggle == true %} disabled="true" {% endif %} 
 							data-ajax="false" 
-							href="{{page.rot}}/titles/{{book.id}}/file/{{format.name}}.{{format.format|lower}}">
+							href="{{page.rot}}/titles/{{book.id}}/file/{{format.name|url_encode()}}.{{format.format|lower}}">
 								{{ format.format }}
 						</a>
 				{% endfor %}
