--- a/templates/main.html
+++ b/templates/main.html
@@ -16,8 +16,8 @@
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
   <div data-role="page" data-title="{{ page.title }}">
-    <div data-role="header" data-position="inline">            
-      {% block nav %}{% endblock %}
+    <div data-role="header" data-position="inline">                  
+      {% include "navbar.html" %}
     </div>
     <div data-role="content">      
       {% block content %}{% endblock %}
