Preliminary replacement of config.php with sqlite

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,4 +6,25 @@
 <p >
 	Ändern Sie!
 </p>
+<form action="{{page.rot}}/admin/" method="post">
+	<fieldset data-role="fieldcontain">
+		<label for="calibre_dir">Calibre Bibliotheksverzeichnis:</label>
+		<input name="calibre_dir" id="calibre_dir" type="text" 
+			value="{{page.glob.calibre_dir}}" placeholder="Calibre Verzeichnis">{{glob.calibre_dir}}</input>
+	</fieldset>
+	<fieldset data-role="fieldcontain">
+		<label for="global_dl_prot">Globaler Downloadschutz:</label>
+		<select name="global_dl_prot" id="global_dl_prot" data-role="slider" 
+			value="{%if page.glob.glob_dl_toggle%}1{%else%}0{%endif%}">
+			<option value="0">Off</option>
+			<option value="1">On</option>
+		</select>
+		</fieldset> 
+		<fieldset data-role="fieldcontain">
+			<label for="global_dl_pw">Passwort für Downloadschutz:</label>
+			<input name="global_dl_pw" id="global_dl_pw" type="password" 
+				value="{{page.glob.glob_dl_password}}" placeholder="Download PW" />
+		</fieldset>
+		<button type="submit">OK</button>	
+</form>
 {% endblock %}
