--- a/templates/authors.html
+++ b/templates/authors.html
@@ -7,7 +7,11 @@
 		{% if author.initial != "" %}
 			<li data-role="list-divider"> {{ author.initial }}</li>
 		{% else %}
-			<li><a href="{{page.rot}}/authors/{{ author.id }}">{{ author.sort }}</a></li>
+			<li>
+				<a href="{{page.rot}}/authors/{{ author.id }}">{{ author.sort }}
+					<span class="ui-li-count">{{author.anzahl}}</span>
+				</a>
+			</li>
 		{% endif %}
   {% endfor %}
 </ul>
