--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<h1>{{ page.glob.appname }} :: {{ page.h1 }}</h1>
+<h1>{{ page.title }}</h1>
 <a href="{{page.rot}}/admin/" data-icon="gear" class="ui-btn-left">{{ page.glob.langa.admin_short }}</a>
 {% if page.menu == 0 %}
 <a  data-icon="back" data-rel="back" class="ui-btn-right">{{ page.glob.langa.back }}</a>
