--- a/style/style.less
+++ b/style/style.less
@@ -44,6 +44,19 @@ div.footer {
   p { text-align: center; }
 }
 
+div#flash {
+  p {
+    color: white;
+    
+    .success {
+      background-color: green;
+    }
+    .error {
+      background-color: red; 
+    }
+  }  
+}
+
 @media (max-width: 480px) {
   .title_detail_image {
     float: none;
