--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,10 +1,22 @@
 {% extends 'main.html' %}
 
-
+{% block pid %}id="padmin"{%endblock%}
 {% block content %}
 <h1>{{ page.glob.langa.admin }}</h1>
-<p id="flash" />
-<form action="{{page.rot}}/admin/" data-ajax="false" method="post">
+<div id="flash">	
+	{% if flash['info'] %}
+		<p class="success">{{flash['info']}}</p>
+	{% endif %}
+	{% if flash['error']%}
+		<p class="error">{{flash['info']}}</p>
+	{% endif %}
+</div>
+<form action="{{page.rot}}/admin/" method="post" id="adminform">
+	<fieldset data-role="fieldcontain">
+			<label for="admin_pw">{{page.glob.langa.admin_pw1}}</label>
+			<input name="admin_pw" id="admin_pw" type="text" 
+				value="{{page.glob.admin_pw}}" placeholder="{{page.glob.langa.admin_pw2}}" />
+		</fieldset>
 	<fieldset data-role="fieldcontain">
 		<label for="calibre_dir">{{page.glob.langa.calibre_dir1}}</label>
 		<input name="calibre_dir" id="calibre_dir" type="text" 
@@ -13,19 +25,44 @@
 	<fieldset data-role="fieldcontain">
 		<label for="glob_dl_toggle">{{page.glob.langa.glob_dl_toggle1}}</label>
 		<select name="glob_dl_toggle" id="glob_dl_toggle" data-role="slider" 
-			value="{%if page.glob.glob_dl_toggle%}0{%else%}1{%endif%}">
-			<option {%if page.glob.glob_dl_toggle%}selected="0"{%endif%} value="0">
+			value="{{page.glob.glob_dl_toggle}}">
+			<option {% if page.glob.glob_dl_toggle == "0" %}selected{%endif%} value="0">
 				{{page.glob.langa.glob_dl_toggle2}}
 			</option>
-			<option {%if page.glob.glob_dl_toggle%}selected="1"{%endif%} value="1">
+			<option {% if page.glob.glob_dl_toggle == "1" %}selected{%endif%} value="1">
 				{{page.glob.langa.glob_dl_toggle3}}
 			</option>
 		</select>
-		</fieldset> 
-		<fieldset data-role="fieldcontain">
-			<label for="glob_dl_password">{{page.glob.langa.glob_dl_pw1}}</label>
-			<input name="glob_dl_password" id="glob_dl_password" type="password" 
-				value="{{page.glob.glob_dl_password}}" placeholder="{{page.glob.langa.glob_dl_pw2}}" />
+	</fieldset>
+	<fieldset data-role="fieldcontain">
+		<label for="glob_dl_use_admin">{{page.glob.langa.glob_dl_use_admin}}</label>
+		<select name="glob_dl_use_admin" id="glob_dl_use_admin" data-role="slider" 
+			value="{{page.glob.glob_dl_use_admin}}"
+			{% if page.glob.glob_dl_toggle == "0" %}
+				disabled
+			{% endif %}
+			>
+			<option {% if page.glob.glob_dl_use_admin == "0"%}selected{%endif%} value="0">
+				{{page.glob.langa.glob_dl_toggle2}}
+			</option>
+			<option {% if page.glob.glob_dl_use_admin == "1"%}selected{%endif%} value="1">
+				{{page.glob.langa.glob_dl_toggle3}}
+			</option>
+		</select>
+	</fieldset>
+	<fieldset data-role="fieldcontain">
+		<label for="glob_dl_password">{{page.glob.langa.glob_dl_pw1}}</label>
+		<input name="glob_dl_password" id="glob_dl_password" type="text" 
+			value="{{page.glob.glob_dl_password}}" placeholder="{{page.glob.langa.glob_dl_pw2}}" 
+			{% if page.glob.glob_dl_toggle %}
+				{% if page.glob.glob_use_admin %}
+				{% else %}
+					disabled
+				{% endif %}
+			{% else %}
+				disabled
+			{% endif %}
+			/>
 		</fieldset>
 		<button type="submit">{{page.glob.langa.save}}</button>	
 </form>
