--- a/style/style.less
+++ b/style/style.less
@@ -44,18 +44,17 @@ div.footer {
   p { text-align: center; }
 }
 
-div#flash {
-  p {
-    color: white;
-    
+div#flash  {
+  color: white;
+  p {padding: 5px;}  
     .success {
       background-color: green;
     }
     .error {
       background-color: red; 
-    }
-  }  
-}
+    }    
+}  
+
 
 @media (max-width: 480px) {
   .title_detail_image {
