--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -15,7 +15,7 @@
 	</header>		
 	<div data-role="collapsible">
 		<h2>{{page.glob.langa.download}}</h2>
-		{% if (protect_dl == true) %} 
+		{% if protect_dl == true %} 
 		<div class="dl_access">
 			<p>
 				{{ page.glob.langa.check_access_info }}
