Added documentation for admin page

--- a/style/style.less
+++ b/style/style.less
@@ -44,6 +44,12 @@ div.footer {
   p { text-align: center; }
 }
 
+/* Explanations, hints in admin page */
+fieldset p {
+  font-size: 80%;
+}
+
+/* Flash messages */
 div#flash  {
   color: white;
   p {padding: 5px;}  
