--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,11 @@ body {
 div.footer p {
   text-align: center;
 }
+/* Explanations, hints in admin page */
+fieldset p {
+  font-size: 80%;
+}
+/* Flash messages */
 div#flash {
   color: white;
 }
