--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,12 @@
 	  	<a href="{{page.rot}}/tags" {% if page.menu == 4 %}class="ui-btn-active"{%endif%}>
 	  		{{page.glob.langa.tags}}
 	  	</a>
-	  </li>       
+	  </li>
+	  <li>
+	  	<a href="{{page.rot}}/series" {% if page.menu == 5 %}class="ui-btn-active"{%endif%}>
+	  		{{page.glob.langa.series}}
+	  	</a>
+	  </li>  	  
 	</ul>
 </div>
 
