--- a/templates/titles.html
+++ b/templates/titles.html
@@ -9,6 +9,7 @@
 			<li>				
 				<a href="{{page.rot}}/titles/{{ book.id }}">
 					<img src="{{page.rot}}/titles/{{ book.id }}/thumbnail" />
+					<p> {{ book.author_sort }} </p>
 					{{ book.sort }}
 				</a>
 			</li>
