--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,18 @@
-<h1>{{ page.title }}</h1>
+{% if curpage != NULL %}
+	{% if curpage > 0 %}
+		<a  data-icon="arrow-l" data-role="button" class="ui-btn-left" href="{{page.rot}}/titleslist/{{curpage - 1}}">
+			prev
+		</a>	
+	{% endif %}
+	{% if curpage+1 < pages %}
+		<a  data-icon="arrow-r" data-role="button"  href="{{page.rot}}/titleslist/{{curpage + 1}}">
+			next
+		</a>	
+	{% endif %}
+	<h1>Seite {{ curpage+1 }}/{{ pages }}</h1>
+{% else %}
+	<h1>{{ page.title }}</h1>
+{% endif %}
 {% if page.menu == 0 %}
 <a  data-icon="back" data-rel="back" class="ui-btn-right">{{ page.glob.langa.back }}</a>
 {% endif %}
